force-app/main/default/objects/Call_Line_History__c/fields/Call_Line__c.field-meta.xml
<CustomField>
    <fullName>Call_Line__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>reference id to Call Line Object</description>
    <label>Call Line</label>
    <referenceTo>Call_Line__c</referenceTo>
    <relationshipLabel>Call Line Histories</relationshipLabel>
    <relationshipName>Call_Line_Histories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>