force-app/main/default/objects/Call_Line_History__c/fields/Call_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Line_Status__c</fullName>
    <label>Call Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>