force-app/main/default/objects/Call_Line_History__c/fields/Call_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Call_Remarks__c</fullName>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>