force-app/main/default/objects/Call_Line_History__c/fields/Detail_Status__c.field-meta.xml
<CustomField>
    <fullName>Detail_Status__c</fullName>
    <label>Detail Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer wants to meet FA</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Produk Tidak Sesuai</fullName>
            </value>
            <value>
                <fullName>FA Service</fullName>
            </value>
            <value>
                <fullName>Nasabah butuh dana</fullName>
            </value>
            <value>
                <fullName>Sedang proses pembatalan polis di POS</fullName>
            </value>
            <value>
                <fullName>Polis tidak sesuai</fullName>
            </value>
            <value>
                <fullName>Suspicious - tidak merasa membeli polis</fullName>
            </value>
            <value>
                <fullName>Nasabah merasa tidak pernah diinformasikan akan dihubungi oleh AXA Mandiri</fullName>
            </value>
            <value>
                <fullName>Nasabah Takut Penipuan</fullName>
            </value>
            <value>
                <fullName>Nasabah Sibuk</fullName>
            </value>
            <value>
                <fullName>Nasabah Tidak Mau Direkam</fullName>
            </value>
            <value>
                <fullName>Nasabah Tidak Mau Dikonfirmasi</fullName>
            </value>
            <value>
                <fullName>Correspondence Address</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Verification is not succeed</fullName>
            </value>
            <value>
                <fullName>FA perlu menjelaskan kembali tentang</fullName>
            </value>
            <value>
                <fullName>FA perlu menjelaskan kembali</fullName>
            </value>
            <value>
                <fullName>SPRO - Produk tidak sesuai</fullName>
            </value>
            <value>
                <fullName>SAGT - Kecewa dengan Service FA</fullName>
            </value>
            <value>
                <fullName>SFIN - Nasabah butuh dana</fullName>
            </value>
            <value>
                <fullName>SFAM - Alasan keluarga</fullName>
            </value>
            <value>
                <fullName>SMIN - Terlalu banyak asuransi</fullName>
            </value>
            <value>
                <fullName>Suspious - Tidak merasa membeli Polis</fullName>
            </value>
            <value>
                <fullName>Tidak mau sebutkan alasannya</fullName>
            </value>
            <value>
                <fullName>Belum terima e-pol</fullName>
            </value>
            <value>
                <fullName>Terdapat ketidaksesuaian data pada proses NBUW</fullName>
            </value>
            <value>
                <fullName>PP info tidak ketemu dengan FA tapi dengan staff BM/selain FA</fullName>
            </value>
            <value>
                <fullName>Penjelasan FA tidak sesuai dengan product spec</fullName>
            </value>
            <value>
                <fullName>Kecewa dengan layanan FA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>