force-app/main/default/objects/Call_Line_History__c/fields/Reason_Detail_Status__c.field-meta.xml
<CustomField>
    <fullName>Reason_Detail_Status__c</fullName>
    <label>Reason Detail Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nominal premi dan cara bayar</fullName>
            </value>
            <value>
                <fullName>Klausal kegagalan pendebitan</fullName>
            </value>
            <value>
                <fullName>Konfirmasi mengenai penalty (MEP)</fullName>
            </value>
            <value>
                <fullName>Informasi tentang investasi yang fluktuatif dan tidak dijamin</fullName>
            </value>
            <value>
                <fullName>Memastikan nasabah membaca kembali aplikasi sebelum di tandatangani</fullName>
            </value>
            <value>
                <fullName>Nasabah hanya ingin sekali bayar</fullName>
            </value>
            <value>
                <fullName>Nasabah ingin produk lain</fullName>
            </value>
            <value>
                <fullName>Nasabah ingin deposito / tabungan / hanya investasi</fullName>
            </value>
            <value>
                <fullName>Tidak dijelaskan tentang biaya penalty</fullName>
            </value>
            <value>
                <fullName>Tidak dijelaskan biaya asuransi</fullName>
            </value>
            <value>
                <fullName>Tidak dijelaskan fluktuasi nilai investasi</fullName>
            </value>
            <value>
                <fullName>Tidak dijelaskan masa pembayaran premi</fullName>
            </value>
            <value>
                <fullName>Data polis tidak sesuai keinginan nasabah</fullName>
            </value>
            <value>
                <fullName>Ahli waris tidak sesuai keinginan nasabah</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Fluktuasi nilai Investasi</fullName>
            </value>
            <value>
                <fullName>Biaya-biaya Asuransi</fullName>
            </value>
            <value>
                <fullName>Besaran atau masa pembayaran premi</fullName>
            </value>
            <value>
                <fullName>Manfaat produk</fullName>
            </value>
            <value>
                <fullName>Pengajuan polisnya</fullName>
            </value>
            <value>
                <fullName>Produk yang dibeli adalah produk asuransi bukan Tabungan/deposito/reksadana/tabungan haji/produk bank lainnya</fullName>
            </value>
            <value>
                <fullName>Karena nasabah belum terinformasi akan adanya proses welcome call</fullName>
            </value>
            <value>
                <fullName>Nasabah merasa pengembalian premi nya terlalu lama</fullName>
            </value>
            <value>
                <fullName>FA menjelaskan jika produk yang dibeli adalah produk tabungan/deposito/reksadana/tabungan haji/produk bank BUKAN produk Asuransi</fullName>
            </value>
            <value>
                <fullName>Masa mempelajari atau membatalkan polis/cooling off</fullName>
            </value>
            <value>
                <fullName>Tidak dijelaskan tentang manfaat produk</fullName>
            </value>
            <value>
                <fullName>Penjelasan pre-existing condition</fullName>
            </value>
            <value>
                <fullName>Kondisi pemilihan masa tunggu pada produk PAYDI</fullName>
            </value>
            <value>
                <fullName>Tidak merasa membeli/mengajukan/menyetujui/menandatangani polis</fullName>
            </value>
            <value>
                <fullName>Tidak merasa bertemu FA dan menerima penjelasan mengenai product asuransi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>